--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-env --allow-net --allow-read --allow-run --allow-write main.ts"
+    "dev": "deno run --watch --allow-env --allow-net --allow-read --allow-run --allow-write main.ts",
+    "dev-inspect": "deno run --inspect --allow-env --allow-net --allow-read --allow-run --allow-write main.ts"
   },
   "compilerOptions": {
     "lib": ["deno.window", "dom"]
