--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,10 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-env --allow-net --allow-read --allow-run --allow-write main.ts",
-    "dev-inspect": "deno run --inspect --allow-env --allow-net --allow-read --allow-run --allow-write main.ts"
+    "build": "deno run --allow-env --allow-net --allow-read --allow-run --allow-write build.ts build",
+    "build-watch": "deno run --allow-env --allow-net --allow-read --allow-run --allow-write build.ts watch",
+    "start": "deno run --allow-net --allow-read --allow-write main.ts",
+    "start-watch": "deno run --watch --allow-net --allow-read --allow-write main.ts",
+    "dev": "deno task build-watch & deno task start-watch"
   },
   "compilerOptions": {
     "lib": ["dom", "deno.ns", "deno.unstable"]
